update un-localized attention

--- a/notebooks/detect_high_entropy copy.ipynb
+++ b/notebooks/detect_high_entropy copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "bb95730d",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "da61290e",
    "metadata": {},
    "outputs": [
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "ea5e0394",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89eea9966c7e46de9284f11412f2c6d7",
+       "model_id": "1fb9922b631243209dd8223b79cf92ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -73,7 +73,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "912d66a911a94c4a833e0a6745e2a6a6",
+       "model_id": "10e7a3e4d97d4bf99ae8f1afc26fbefb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,7 +87,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e60a58b45524960a900e5ab2644cf88",
+       "model_id": "4597aed6117a439686321a48337f5d4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -101,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0583073f634747d0a51f965873b672b3",
+       "model_id": "97b9f8045592497f86a6379f38bccaa5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ec1286e42eb4d9aa4f7ce5cf2b4fd4e",
+       "model_id": "c3bf60376ed74a1e9b8dd64cd6c02250",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0a4776204c7409ba4319df816417747",
+       "model_id": "edbe55a8a96f4ae7a1c4ffd96cb3fc86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +143,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0597bb813ccf42889a15e91444e82bc0",
+       "model_id": "814866dc2ade428680eb993a4840bfb2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,7 +157,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d507fd2c04614ba5873bc80a9e2f0147",
+       "model_id": "cf003705e68749f0a696850f553283fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,7 +171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbae1175c32a4cc2892a4112809c92d4",
+       "model_id": "36dced30e9d2453da382fa186f3357fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "c1cd8b74",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "599ee9cb",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3bc906ce",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "e9fe8c3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_question2 = \"\"\"\n",
+    "Eliza's rate per hour for the first 40 hours she works each week is $10. She also receives an overtime pay of 1.2 times her regular hourly rate. If Eliza worked for 45 hours this week, how much are her earnings for this week?\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "003e96f9",
    "metadata": {},
    "outputs": [
@@ -306,305 +318,6 @@
      "text": [
       "The following generation flags are not valid and may be ignored: ['temperature', 'top_p']. Set `TRANSFORMERS_VERBOSITY=info` for more details.\n",
       "Setting `pad_token_id` to `eos_token_id`:151643 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Okay, so I have this problem where Aya goes for a 9-kilometer walk every morning and then stops at a coffee shop. The problem gives me two different scenarios about her walking speed and the time it takes, including the time she spends in the coffee shop. I need to find out how long it takes her when she walks at a speed of s + 1/2 kilometers per hour, including the coffee shop time.\n",
-      "\n",
-      "Let me try to break this down step by step.\n",
-      "\n",
-      "First, let's parse the information given:\n",
-      "\n",
-      "1. When Aya walks at a constant speed of s km/h, the entire trip (walk + coffee shop) takes 4 hours.\n",
-      "2. When she walks at s + 2 km/h, the entire trip takes 2 hours and 24 minutes.\n",
-      "3. In both cases, the time spent in the coffee shop is t minutes.\n",
-      "4. We need to find the total time when she walks at s + 1/2 km/h, including the coffee shop time.\n",
-      "\n",
-      "So, the key here is that the coffee shop time, t, is the same in both scenarios. The difference is in her walking speed and the total time taken.\n",
-      "\n",
-      "Let me denote the time she spends walking as T1 in the first case and T2 in the second case. Then, the total time in each case is T1 + t and T2 + t, respectively.\n",
-      "\n",
-      "Given that the walk is 9 kilometers, the time she spends walking can be calculated using the formula:\n",
-      "\n",
-      "Time = Distance / Speed\n",
-      "\n",
-      "So, for the first case:\n",
-      "\n",
-      "T1 = 9 / s hours\n",
-      "\n",
-      "And the total time is T1 + t = 4 hours.\n",
-      "\n",
-      "Similarly, for the second case:\n",
-      "\n",
-      "T2 = 9 / (s + 2) hours\n",
-      "\n",
-      "And the total time is T2 + t = 2 hours and 24 minutes.\n",
-      "\n",
-      "Wait, 2 hours and 24 minutes needs to be converted into hours to make the units consistent. Since 24 minutes is 24/60 hours, which is 0.4 hours. So, 2 hours and 24 minutes is 2.4 hours.\n",
-      "\n",
-      "So, T2 + t = 2.4 hours.\n",
-      "\n",
-      "Now, we have two equations:\n",
-      "\n",
-      "1. 9/s + t = 4\n",
-      "2. 9/(s + 2) + t = 2.4\n",
-      "\n",
-      "We can set up these two equations and solve for s and t.\n",
-      "\n",
-      "Let me write them down:\n",
-      "\n",
-      "Equation 1: 9/s + t = 4\n",
-      "\n",
-      "Equation 2: 9/(s + 2) + t = 2.4\n",
-      "\n",
-      "If I subtract Equation 2 from Equation 1, I can eliminate t and solve for s.\n",
-      "\n",
-      "So, subtracting Equation 2 from Equation 1:\n",
-      "\n",
-      "(9/s + t) - (9/(s + 2) + t) = 4 - 2.4\n",
-      "\n",
-      "Simplify:\n",
-      "\n",
-      "9/s - 9/(s + 2) = 1.6\n",
-      "\n",
-      "Let me compute 9/s - 9/(s + 2):\n",
-      "\n",
-      "Factor out 9:\n",
-      "\n",
-      "9*(1/s - 1/(s + 2)) = 1.6\n",
-      "\n",
-      "Compute the expression inside the parentheses:\n",
-      "\n",
-      "1/s - 1/(s + 2) = (s + 2 - s)/(s(s + 2)) = 2/(s(s + 2))\n",
-      "\n",
-      "So, substituting back:\n",
-      "\n",
-      "9*(2)/(s(s + 2)) = 1.6\n",
-      "\n",
-      "Simplify:\n",
-      "\n",
-      "18/(s(s + 2)) = 1.6\n",
-      "\n",
-      "Multiply both sides by s(s + 2):\n",
-      "\n",
-      "18 = 1.6*s(s + 2)\n",
-      "\n",
-      "Divide both sides by 1.6:\n",
-      "\n",
-      "18 / 1.6 = s(s + 2)\n",
-      "\n",
-      "Compute 18 / 1.6:\n",
-      "\n",
-      "18 divided by 1.6 is the same as 180 / 16, which simplifies to 45 / 4, which is 11.25.\n",
-      "\n",
-      "So, s(s + 2) = 11.25\n",
-      "\n",
-      "Let me write this as a quadratic equation:\n",
-      "\n",
-      "s^2 + 2s - 11.25 = 0\n",
-      "\n",
-      "To solve for s, we can use the quadratic formula:\n",
-      "\n",
-      "s = [-b ± sqrt(b^2 - 4ac)]/(2a)\n",
-      "\n",
-      "Here, a = 1, b = 2, c = -11.25\n",
-      "\n",
-      "Compute discriminant:\n",
-      "\n",
-      "b^2 - 4ac = 4 - 4*1*(-11.25) = 4 + 45 = 49\n",
-      "\n",
-      "So, sqrt(49) = 7\n",
-      "\n",
-      "Thus, s = [-2 ± 7]/2\n",
-      "\n",
-      "We have two solutions:\n",
-      "\n",
-      "s = (-2 + 7)/2 = 5/2 = 2.5\n",
-      "\n",
-      "s = (-2 - 7)/2 = -9/2 = -4.5\n",
-      "\n",
-      "Since speed cannot be negative, we discard -4.5.\n",
-      "\n",
-      "So, s = 2.5 km/h\n",
-      "\n",
-      "Now that we have s, we can find t from Equation 1:\n",
-      "\n",
-      "9/s + t = 4\n",
-      "\n",
-      "Substitute s = 2.5:\n",
-      "\n",
-      "9 / 2.5 + t = 4\n",
-      "\n",
-      "Compute 9 / 2.5:\n",
-      "\n",
-      "9 divided by 2.5 is the same as 9 * (2/5) = 18/5 = 3.6\n",
-      "\n",
-      "So, 3.6 + t = 4\n",
-      "\n",
-      "Therefore, t = 4 - 3.6 = 0.4 hours\n",
-      "\n",
-      "Convert t to minutes: 0.4 hours * 60 minutes/hour = 24 minutes\n",
-      "\n",
-      "So, t = 24 minutes\n",
-      "\n",
-      "Now, the question is asking for the total time when she walks at s + 1/2 km/h, including the coffee shop time.\n",
-      "\n",
-      "First, compute s + 1/2:\n",
-      "\n",
-      "s = 2.5, so s + 1/2 = 2.5 + 0.5 = 3 km/h\n",
-      "\n",
-      "Now, compute the walking time at 3 km/h:\n",
-      "\n",
-      "Time = 9 / 3 = 3 hours\n",
-      "\n",
-      "Then, add the coffee shop time, which is 24 minutes.\n",
-      "\n",
-      "Convert 24 minutes to hours: 24 / 60 = 0.4 hours\n",
-      "\n",
-      "So, total time is 3 + 0.4 = 3.4 hours\n",
-      "\n",
-      "Convert 3.4 hours to hours and minutes:\n",
-      "\n",
-      "0.4 hours * 60 minutes/hour = 24 minutes\n",
-      "\n",
-      "So, total time is 3 hours and 24 minutes.\n",
-      "\n",
-      "But the question asks for the number of minutes. So, 3 hours is 180 minutes, plus 24 minutes is 204 minutes.\n",
-      "\n",
-      "Wait, hold on. Let me double-check my calculations.\n",
-      "\n",
-      "Wait, 3 hours is 180 minutes, plus 24 minutes is 204 minutes. That seems correct.\n",
-      "\n",
-      "But let me verify the steps again to make sure I didn't make a mistake.\n",
-      "\n",
-      "First, found s = 2.5 km/h, t = 24 minutes.\n",
-      "\n",
-      "Then, walking speed is 3 km/h, so time is 9 / 3 = 3 hours.\n",
-      "\n",
-      "Adding 24 minutes, which is 0.4 hours, so total time is 3.4 hours, which is 3 hours and 24 minutes, which is 204 minutes.\n",
-      "\n",
-      "Yes, that seems consistent.\n",
-      "\n",
-      "Wait, but let me check the initial equations again to make sure s was correctly calculated.\n",
-      "\n",
-      "We had:\n",
-      "\n",
-      "9/s - 9/(s + 2) = 1.6\n",
-      "\n",
-      "Which led to 18/(s(s + 2)) = 1.6\n",
-      "\n",
-      "Then, s(s + 2) = 18 / 1.6 = 11.25\n",
-      "\n",
-      "So, s^2 + 2s - 11.25 = 0\n",
-      "\n",
-      "Solutions: s = [ -2 ± sqrt(4 + 45) ] / 2 = [ -2 ± 7 ] / 2\n",
-      "\n",
-      "So, s = 5/2 = 2.5, correct.\n",
-      "\n",
-      "Then, t = 4 - 9/s = 4 - 3.6 = 0.4 hours, which is 24 minutes.\n",
-      "\n",
-      "So, that seems correct.\n",
-      "\n",
-      "Then, when she walks at 3 km/h, time is 3 hours, coffee shop is 24 minutes, so total is 3.4 hours, which is 204 minutes.\n",
-      "\n",
-      "Wait, but let me think again. Is the coffee shop time t the same in both cases? Yes, the problem says \"including t minutes spent in the coffee shop.\" So, in both scenarios, the coffee shop time is t, which is 24 minutes.\n",
-      "\n",
-      "Therefore, when she walks at s + 1/2, which is 3 km/h, the walking time is 3 hours, and the coffee shop time is still 24 minutes, so total time is 3 hours 24 minutes, which is 204 minutes.\n",
-      "\n",
-      "Therefore, the answer is 204 minutes.\n",
-      "\n",
-      "But just to be thorough, let me check the second scenario with s = 2.5.\n",
-      "\n",
-      "Walking speed is 2.5 km/h, so time is 9 / 2.5 = 3.6 hours, which is 3 hours and 36 minutes.\n",
-      "\n",
-      "Adding t = 24 minutes, total time is 3 hours 36 minutes + 24 minutes = 4 hours, which matches the first scenario.\n",
-      "\n",
-      "Similarly, in the second scenario, walking speed is s + 2 = 4.5 km/h.\n",
-      "\n",
-      "Time is 9 / 4.5 = 2 hours.\n",
-      "\n",
-      "Adding t = 24 minutes, total time is 2 hours 24 minutes, which is 2.4 hours, as given.\n",
-      "\n",
-      "So, that checks out.\n",
-      "\n",
-      "Therefore, when she walks at 3 km/h, the walking time is 3 hours, coffee shop is 24 minutes, so total time is 3 hours 24 minutes, which is 204 minutes.\n",
-      "\n",
-      "So, I think that's the correct answer.\n",
-      "\n",
-      "**Final Answer**\n",
-      "The total time is \\boxed{204} minutes.\n",
-      "</think>\n",
-      "\n",
-      "Given that Aya walks 9 kilometers every morning and stops at a coffee shop, we need to find the total time she takes when walking at a speed of \\( s + \\frac{1}{2} \\) kilometers per hour, including the coffee shop time \\( t \\) minutes.\n",
-      "\n",
-      "First, we set up the equations based on the given information:\n",
-      "\n",
-      "1. When walking at \\( s \\) km/h, the total time is 4 hours:\n",
-      "   \\[\n",
-      "   \\frac{9}{s} + t = 4\n",
-      "   \\]\n",
-      "2. When walking at \\( s + 2 \\) km/h, the total time is 2 hours and 24 minutes (which is 2.4 hours):\n",
-      "   \\[\n",
-      "   \\frac{9}{s + 2} + t = 2.4\n",
-      "   \\]\n",
-      "\n",
-      "Subtracting the second equation from the first to eliminate \\( t \\):\n",
-      "\\[\n",
-      "\\frac{9}{s} - \\frac{9}{s + 2} = 1.6\n",
-      "\\]\n",
-      "\n",
-      "Simplifying the left-hand side:\n",
-      "\\[\n",
-      "9 \\left( \\frac{1}{s} - \\frac{1}{s + 2} \\right) = 1.6\n",
-      "\\]\n",
-      "\\[\n",
-      "9 \\left( \\frac{2}{s(s + 2)} \\right) = 1.6\n",
-      "\\]\n",
-      "\\[\n",
-      "\\frac{18}{s(s + 2)} = 1.6\n",
-      "\\]\n",
-      "\\[\n",
-      "s(s + 2) = \\frac{18}{1.6} = 11.25\n",
-      "\\]\n",
-      "\n",
-      "Solving the quadratic equation:\n",
-      "\\[\n",
-      "s^2 + 2s - 11.25 = 0\n",
-      "\\]\n",
-      "\n",
-      "Using the quadratic formula:\n",
-      "\\[\n",
-      "s = \\frac{-2 \\pm \\sqrt{4 + 45}}{2} = \\frac{-2 \\pm 7}{2}\n",
-      "\\]\n",
-      "\\[\n",
-      "s = 2.5 \\text{ (since speed cannot be negative)}\n",
-      "\\]\n",
-      "\n",
-      "Substituting \\( s = 2.5 \\) back into the first equation to find \\( t \\):\n",
-      "\\[\n",
-      "\\frac{9}{2.5} + t = 4\n",
-      "\\]\n",
-      "\\[\n",
-      "3.6 + t = 4\n",
-      "\\]\n",
-      "\\[\n",
-      "t = 0.4 \\text{ hours} = 24 \\text{ minutes}\n",
-      "\\]\n",
-      "\n",
-      "When walking at \\( s + \\frac{1}{2} = 3 \\) km/h, the walking time is:\n",
-      "\\[\n",
-      "\\frac{9}{3} = 3 \\text{ hours}\n",
-      "\\]\n",
-      "\n",
-      "Adding the coffee shop time:\n",
-      "\\[\n",
-      "3 \\text{ hours} + 24 \\text{ minutes} = 3.4 \\text{ hours} = 204 \\text{ minutes}\n",
-      "\\]\n",
-      "\n",
-      "Thus, the total time is \\(\\boxed{204}\\) minutes.\n"
      ]
     }
    ],
