update train w/ entropy

--- a/notebooks/detect_high_entropy copy 2.ipynb
+++ b/notebooks/detect_high_entropy copy 2.ipynb
@@ -2,17 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "id": "bb95730d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2026-01-13 03:25:01] INFO font_manager.py:1639: generated new fontManager\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fb9922b631243209dd8223b79cf92ed",
+       "model_id": "9b4af8385c9143c8b92a816bd7ed1fa3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10e7a3e4d97d4bf99ae8f1afc26fbefb",
+       "model_id": "9125768754fd4b3a9410a618388bd056",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4597aed6117a439686321a48337f5d4a",
+       "model_id": "246d30d52d00427e9ba8ce4435195e98",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97b9f8045592497f86a6379f38bccaa5",
+       "model_id": "8fe2c48ca2d641ec9ab6eab952f08b53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3bf60376ed74a1e9b8dd64cd6c02250",
+       "model_id": "3ed5095f964145ee9b44f398c436bcac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edbe55a8a96f4ae7a1c4ffd96cb3fc86",
+       "model_id": "12bcc9fdeed743a4849efa75eb8841e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "814866dc2ade428680eb993a4840bfb2",
+       "model_id": "2001c2d945fd40eb8306733191233f53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf003705e68749f0a696850f553283fe",
+       "model_id": "b9ecc8c68c634946a6f16a48294af798",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +180,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36dced30e9d2453da382fa186f3357fc",
+       "model_id": "2e7271f4851449a594df1fe70d8bf0f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -286,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3bc906ce",
    "metadata": {},
    "outputs": [],
@@ -298,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e9fe8c3b",
    "metadata": {},
    "outputs": [],
@@ -310,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "003e96f9",
    "metadata": {},
    "outputs": [
@@ -695,18 +702,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ae7ff2f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2026-01-11 11:17:09] INFO font_manager.py:1639: generated new fontManager\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -787,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "7cb3e92e",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "b4b0f46c",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "id": "6b86792b",
    "metadata": {},
    "outputs": [],
@@ -1441,18 +1440,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "bda51d2a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📝 Examples provided above. Uncomment to run after generating with output_attentions=True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example usage of visualize_query_attention_barchart\n",
     "# You need: attentions_to_use, generated_tokens from previous cells\n",
@@ -1537,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "id": "5794cc4a",
    "metadata": {},
    "outputs": [],
@@ -1615,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "af44ec0c",
    "metadata": {},
    "outputs": [],
@@ -1689,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "b6061230",
    "metadata": {},
    "outputs": [],
@@ -1783,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "id": "eb507aa3",
    "metadata": {},
    "outputs": [],
@@ -2183,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "6b022527",
    "metadata": {},
    "outputs": [],
@@ -3318,6 +3309,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
